langchain4j integration (#496)
Signed-off-by: Eric Deandrea <edeandrea@redhat.com>